<resources>
    <string name="app_name">Excellent</string>


    <!--LoginActivity资源id-->
    <string name="login_title_text">登录</string>
    <string name="login_edit_username">用户名</string>
    <string name="login_edit_password">密码</string>
    <string name="login_cb_rem">记住密码</string>
    <string name="login_cb_auto">自动登录</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_register">注册</string>


    <!--MainActivity资源id-->
    <string name="main_rb_name1">水果知识</string>
    <string name="main_rb_name2">诗词鉴赏</string>
    <string name="main_rb_name3">聊天界面</string>
    <string name="main_rb_name4">作文大全</string>



    <!--Fragment2资源id-->
    <string name="fragment2_tv_title">暂无数据，下拉刷新吧！</string>


    <!--Fragment3资源id-->
    <string name="fragment3_et_hint">input something you want to send</string>
    <string name="fragment3_btn_send">send</string>



</resources>
