<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--定义全局可滑动的ViewPager-->
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <!--用于占位Toolbar的布局-->
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--菜单栏、工具栏-->
                <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.AppBarLayout>

        </android.support.design.widget.CoordinatorLayout>


        <!--用于占位下方的4个按钮-->
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    style="@style/rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:drawableTop="@drawable/rb1_selector"
                    android:text="@string/main_rb_name1"
                    android:textColor="@drawable/text_color_selector" />

                <RadioButton
                    android:id="@+id/rb2"
                    style="@style/rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/rb2_selector"
                    android:text="@string/main_rb_name2"
                    android:textColor="@drawable/text_color_selector" />

                <RadioButton
                    android:id="@+id/rb3"
                    style="@style/rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/rb3_selector"
                    android:text="@string/main_rb_name3"
                    android:textColor="@drawable/text_color_selector" />

                <RadioButton
                    android:id="@+id/rb4"
                    style="@style/rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/rb4_selector"
                    android:text="@string/main_rb_name4"
                    android:textColor="@drawable/text_color_selector" />
            </RadioGroup>
        </FrameLayout>

    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_layout"
        app:menu="@menu/nav_menu" />


</android.support.v4.widget.DrawerLayout>